feat: add navigation

--- a/src/_includes/layouts/_header.njk
+++ b/src/_includes/layouts/_header.njk
@@ -1,5 +1,9 @@
 <header>
   <nav>
     <a href="/">Punk Code</a>
+    {% set navPages = collections.all | eleventyNavigation %}
+    {%- for entry in navPages %}
+      <a href="{{ entry.url | url }}">{{ entry.title }}</a>
+    {%- endfor %}
   </nav>
 </header>
