--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -4,9 +4,10 @@
   <section>
     {{ content | safe }}
   </section>
-  <section>
-    <p>Read the <a href="">Punk Code Manifesto</a>.</p>
-    <p>Watch the <a href="">DIY Guides</a>.</p>
-    <p>See my <a href="">Design Choices</a>.</p>
-  </section>
+  <nav>
+    {% set navPages = collections.all | eleventyNavigation %}
+    {%- for entry in navPages %}
+      <p>{{ entry.excerpt }} <a href="{{ entry.url | url }}">{{ entry.title }}</a>.</p>
+    {% endfor -%}
+  </nav>
 {% endblock -%}
