--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Punk Code</title>
+    <title>{%- if title %}{{ title }} | {% endif %}{{ site.title }}</title>
   </head>
   <body>
     {% include "./_header.njk" %}
