--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,6 +1,6 @@
 {% extends "./base.njk" %}
 
 {%- block main %}
-  <h1 class="text-xl">{{ title }}</h1>
+  <h1>{{ title }}</h1>
   {{ content | safe }}
 {% endblock -%}
