--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <meta name="description" content="{{ description }}">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>{%- if title %}{{ title }} | {% endif %}{{ site.title }}</title>
   </head>
   <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
