--- a/src/styles/punk-code-base.css
+++ b/src/styles/punk-code-base.css
@@ -8,7 +8,7 @@
     @apply font-bowlby text-4xl;
   }
   h2 {
-    @apply text-xl;
+    @apply text-3xl;
   }
   a {
     @apply text-penguin-orange;
