feat: add card component and update style

--- a/src/_includes/layouts/_header.njk
+++ b/src/_includes/layouts/_header.njk
@@ -1,5 +1,5 @@
-<header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
+<header class="penguin-header">
   <nav class="text-center py-4">
-    <a href="/" class="logo">Punk Code</a>
+    <a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a>
   </nav>
 </header>
