--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>{%- if title %}{{ title }} | {% endif %}{{ site.title }}</title>
   </head>
-  <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
     {% include "./_header.njk" %}
-    <main class="container mx-auto p-4 flex flex-col">
+    <main class="container mx-auto p-4 flex-grow">
       {%- block main %}
         {{ content | safe }}
       {% endblock -%}
     </main>
+    {% include "./_footer.njk" %}
   </body>
 </html>
