--- a/src/styles/punk-code-components.css
+++ b/src/styles/punk-code-components.css
@@ -1,11 +1,5 @@
 @layer base {
-  .logo {
-    @apply font-bowlby text-5xl;
-  }
-  @supports (-webkit-text-stroke: 0.13rem #1c211d) {
-    .logo {
-      @apply text-penguin-tan;
-      -webkit-text-stroke: 0.13rem #1c211d;
-    }
+  .penguin-header {
+    @apply bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan;
   }
 }
