--- a/src/styles/punk-code-base.css
+++ b/src/styles/punk-code-base.css
@@ -8,6 +8,9 @@
     @apply font-bowlby;
   }
   h1 {
+    @apply text-4xl md:text-5xl lg:text-6xl mb-4;
+  }
+  h2 {
     @apply text-3xl md:text-4xl lg:text-5xl;
   }
 
@@ -20,6 +23,10 @@
   }
 
   footer a {
-    @apply text-penguin-tan border-r last:border-r-0 border-penguin-tan pr-1 last:p-0;
+    @apply text-penguin-tan;
+  }
+
+  article p {
+    @apply mb-4;
   }
 }
