--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ description }}">
     <link rel="stylesheet" href="/styles/style.css">
-    <title>{%- if title %}{{ title }} | {% endif %}{{ site.title }}</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png?v=1">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest?v=1">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg?v=1" color="#fb4901">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico?v=1">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml?v=1">
+    <meta name="theme-color" content="#fb4901">
+    <title>{%- if title %}{{ title }} | {% endif -%}{{ site.title }}</title>
   </head>
-  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan text-base md:text-lg">
     {% include "./_header.njk" %}
     <main class="container mx-auto p-4 flex-grow">
+      {%- if key %}
+        <nav class="flex mb-4">
+          {% set navPages = collections.all | eleventyNavigationBreadcrumb(key) %}
+          {%- for entry in navPages %}
+            <a href="{{ entry.url }}" class="mr-2">{{ entry.title }}</a>
+            <span class="mr-2">&gt;</span>
+          {% endfor -%}
+          <span>{{ title }}</span>
+        </nav>
+      {% endif -%}
       {%- block main %}
         {{ content | safe }}
       {% endblock -%}
