--- a/src/_includes/layouts/error.njk
+++ b/src/_includes/layouts/error.njk
@@ -1,8 +1,10 @@
 {% extends "./base.njk" %}
 
 {%- block main %}
-  <article>
+  <header>
     <h1>{{ title }}</h1>
-    {{ content | safe }}
-  </article>
+  </header>
+  <section>
+    {{ content | safe }}  
+  </section>
 {% endblock -%}
