--- a/src/_includes/macros/components.njk
+++ b/src/_includes/macros/components.njk
@@ -1,7 +1,9 @@
-{% macro card(title, text, goToLink, goToText) %}
-  <section class="border border-penguin-black dark:border-penguin-tan flex flex-col">
-    <h2 class="p-2 penguin-header with-stroke text-2xl md:text-3xl lg:text-4xl">{{ title }}</h2>
-    <p class="p-2 flex-1 text-base md:text-lg">{{ text }}</p>
-    <a href="{{ goToLink }}" class="p-2 place-self-end">{{ goToText }}</a>
-  </section>
+{% macro card(title, text, link, linkText) %}
+  <article class="border border-penguin-black dark:border-penguin-tan flex flex-col">
+    <h2 class="p-2 penguin-header">
+      <a href="{{ link }}" class="with-stroke">{{ title }}</a>
+    </h2>
+    <p class="p-2 mb-0 flex-1">{{ text }}</p>
+    <a href="{{ link }}" class="p-2 place-self-end">{{ linkText }}</a>
+  </article>
 {% endmacro %}
