fix: margin/padding error

--- a/src/_includes/layouts/manifesto.njk
+++ b/src/_includes/layouts/manifesto.njk
@@ -22,17 +22,17 @@
         <ul class="w-full text-center grid sm:grid-cols-3 sm:items-center">
           <li>&lt;punk-code&gt; is <br /> FAST</li>
           <li class="text-penguin-orange sm:hidden">---</li>
-          <li class="sm:border-l sm:border-r sm:border-penguin-orange sm:my-2 sm:py-2">&lt;punk-code&gt; gets <br /> STRAIGHT TO THE POINT</li>
+          <li class="sm:border-l sm:border-r sm:border-penguin-orange sm:mx-2 sm:px-2">&lt;punk-code&gt; gets <br /> STRAIGHT TO THE POINT</li>
           <li class="text-penguin-orange sm:hidden">---</li>
           <li>&lt;punk-code&gt; is <br /> SIMPLE TO UNDERSTAND</li>
         </ul>
         {%- elif entry.key === "Code SLOW" -%}
         <h2 class="text-center mr-4">Code <span class="sr-only">SLOW</span></h2>
         <ul class="text-3xl md:text-4xl lg:text-5xl ml-4">
-          <li><span class="font-bowlby"><span class="sr-only">Code </span>S</span>ustainable</li>
-          <li><span class="font-bowlby"><span class="sr-only">Code </span>L</span>ocal</li>
-          <li><span class="font-bowlby"><span class="sr-only">Code </span>O</span>rganic</li>
-          <li><span class="font-bowlby"><span class="sr-only">Code </span>W</span>hole</li>
+          <li><span class="sr-only">Code </span><span class="font-bowlby">S</span>ustainable</li>
+          <li><span class="sr-only">Code </span><span class="font-bowlby">L</span>ocal</li>
+          <li><span class="sr-only">Code </span><span class="font-bowlby">O</span>rganic</li>
+          <li><span class="sr-only">Code </span><span class="font-bowlby">W</span>hole</li>
         </ul>
         {%- else -%}
           <p>You need to implement the article.</p>
