--- a/src/styles/punk-code-utilities.css
+++ b/src/styles/punk-code-utilities.css
@@ -4,10 +4,10 @@
       @apply font-bowlby text-penguin-tan;
       -webkit-text-stroke: 0.13rem #1c211d;
     }
-    a.with-stroke {
+    a.with-stroke, .with-stroke button {
       @apply hover:no-underline hover:text-penguin-black focus:no-underline focus:text-penguin-black;
     }
-    a.with-stroke:hover, a.with-stroke:focus {
+    a.with-stroke:hover, a.with-stroke:focus, .with-stroke button:hover, .with-stroke button:focus {
       -webkit-text-stroke-color: #fdfbd2;
     }
   }
