--- a/src/styles/punk-code-components.css
+++ b/src/styles/punk-code-components.css
@@ -2,4 +2,8 @@
   .penguin-header {
     @apply bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan;
   }
+
+  .btn {
+    @apply bg-penguin-orange text-penguin-tan hover:text-penguin-black focus:text-penguin-black border border-penguin-black dark:border-penguin-tan rounded font-bold py-2 px-4;
+  }
 }
