--- a/src/styles/punk-code-base.css
+++ b/src/styles/punk-code-base.css
@@ -2,6 +2,7 @@
   @font-face {
     font-family: Bowlby One SC;
     src: url(/assets/fonts/Bowlby_One_SC/BowlbyOneSC-Regular.woff) format("woff");
+    font-display: swap;
   }
   
   h1, h2 {
@@ -23,7 +24,7 @@
   }
 
   footer a {
-    @apply text-penguin-tan;
+    @apply text-penguin-black;
   }
 
   article p {
