--- a/src/_includes/layouts/_settings.njk
+++ b/src/_includes/layouts/_settings.njk
@@ -1,5 +1,6 @@
 <article
   class="border border-penguin-black dark:border-penguin-tan flex flex-col mx-2 my-2"
+  x-cloak
   x-show="showSettings"
 >
   <h2 class="p-2 penguin-header with-stroke flex">
